[package]
name = "drivefs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["std"] }
clap = { version = "4.4.18", features = ["cargo"] }
drive-v3 = "0.5.1"
fuser = "0.14.0"
libc = "0.2.153"
linked_hash_set = "0.1.4"
serde = { version = "1.0.197", features = ["rc"] }
serde_json = "1.0.114"
